--- a/app/client/style.css
+++ b/app/client/style.css
@@ -1,4 +1,5 @@
 .backgroud-landing-image{
   background: url('/images/Scottish-Fold_01.jpg') no-repeat center center fixed;
+  height: 500px;
   background-size: cover;
 }
